--- a/nodes/client/src/css/Login.css
+++ b/nodes/client/src/css/Login.css
@@ -1,23 +1,38 @@
+div{
+    font-size: 180%;
+    margin: auto;
+    padding: 0px;
+    text-align: center;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 20px;
+    height: 770px;
+    width: 390px;
+}
 input{
 
-    margin-left: 45.5%;
+    text-align: center;
     border: none;
+    font-size: 1cm;
     border-bottom: solid;
     outline: none;
+    width: 60%;
+    margin-bottom: 15px;
 }
-
-
-p{
-    text-align: center;
-    background-color: black;
-    color: white;
-    width: 8%;
-}
-
- h1{
-    text-align: center;
- }
 
  button{
-    margin-left: 49%;
+    text-align: center;
+    padding: 2px;
+    scale: 2;
  }
+
+p{
+    margin: auto;
+    font-size: 50%;
+    text-align: center;
+    border: 2px solid black;
+    padding: 0px; 
+    width: 300px;
+    height: 50px;
+    
+}
