--- a/nodes/client/src/index.css
+++ b/nodes/client/src/index.css
@@ -1,13 +1,48 @@
 body {
-  margin: 0;
+  margin: auto;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+}
+
+#outer div{
+  margin: auto;
+  text-align: center;
+  
+}
+
+.tabchanger {
+  width:50%;
+  height:50px;
+}
+
+.filler {
+  width:33%;
+  height:30px;
+}
+#outer orgname{
+
+  font-size: 230%;
+  background-color: orange;
+  border: 1px solid black;
+  width: 100%;
+  display: block;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#logout {
+  font-size: 200%;
+  width: 110px;
+  height: 50px;
+}
+
+
